# katcr

./: .coveragerc  .travis.yml  AUTHORS  ChangeLog  Changelog.rst  Dockerfile  Readme.rst  TODO.rst  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: FUNDING.yml
.github/workflows/: commit.yml
katcr/: __init__.py  bot.py
katcr/engines/: __init__.py  base.py  digbt.py  eztv.py  jackett.py  katcr.py  magnetsh.py  nyaasi.py  skytorrents.py  tpb.py
tests/unit/: conftest.py  test_base_engine.py  test_cli.py  test_digbit.py  test_import.py  test_katbot.py  test_katcr.py  test_main.py  test_nyaasi.py  test_skytorrents.py  test_tpb.py
