[tool.poetry]
name = "katcr"
version = "3.0.2"
description = "KickassTorrents CLI and Telegram bot"
authors = ["David Francos <opensource@davidfrancos.net>"]
license = "GPL-3.0+"
readme = "Readme.rst"

[tool.poetry.dependencies]
python = "^3.8"
telepot = "^12.7"
cleo = "*"
cutie = "^0.2.2"
torrentmirror = "^2.0"
aiohttp = "^3.7.2"
feedparser = "^6.0.2"
xdg = "^5.0.1"

[tool.poetry.extras]
stream = ["torrentstream"] 

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-flake8 = "^1.0"
pytest-cov = "^2.7"
pytest-sugar = "^0.9.2"

[tool.poetry.scripts]
katcr = "katcr:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
