[tool.poetry]
name = "katcr"
version = "3.0.6"
description = "KickassTorrents CLI and Telegram bot"
authors = ["David Francos <opensource@davidfrancos.net>"]
license = "GPL-3.0+"
readme = "Readme.rst"

[tool.poetry.dependencies]
python = "^3.8"
cleo = "*"
cutie = "^0.2.2"
aiohttp = "^3.7.2"
feedparser = "^6.0.2"
xdg = "^5.0.1"
pytest-asyncio = "^0.14.0"
aiogram = "^2.11.2"
torrentmirror = "*"

[tool.poetry.extras]
stream = ["torrentstream"] 
bot = ["aiogram"] 

[tool.poetry.dev-dependencies]
pytest = "^5"
pytest-flake8 = "^1.0"
pytest-cov = "^2.7"
pytest-sugar = "^0.9.2"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
katcr = "katcr:main"
bot = "katcr:bot"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
