[metadata]
name = katcr
author = David Francos Cuartero
author-email = opensource@davidfrancos.net
summary = Kickasstorrents search lib with python3.5
description-file = Readme.rst
home-page = https://github.com/XayOn/tqueues
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
keywords =
    kickasstorrents
[files]
packages =
    katcr
[entry_points]
console_scripts =
    katcr = katcr:main
    katcr_bot = katcr.bot:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
