[metadata]
name = katcr
author = David Francos Cuartero
author-email = opensource@davidfrancos.net
summary = Kickasstorrents search lib with python3.5
description-file = Readme.rst
home-page = https://github.com/XayOn/katcr
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only


keywords =
    kickasstorrents

[files]
packages =
    katcr

[entry_points]
console_scripts =
    katcr = katcr:main
    katcr_bot = katcr.bot:main

pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
